login & JWT logic partially done
