# services/backend/internal/handler/model.go
@@ -1,5 +1,7 @@
 package handler
 
+import "time"
+
 type createUserRequest struct {
 	Username string `json:"username"`
 	Email    string `json:"email"`
@@ -8,4 +10,15 @@ type createUserRequest struct {
 
 type createUserResponse struct {
 	Status string `json:"status"`
+}
+
+type loginRequest struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type tokenResponse struct {
+	AccessToken string    `json:"access_token"`
+	TokenType   string    `json:"token_type"`
+	ExpiresAt   time.Time `json:"expires_at"`
 }
