# services/backend/internal/handler/router.go
@@ -8,7 +8,7 @@ import (
 func (h *Handler) RegisterRouters(r *httputil.Router) {
 	// auth specific routes
 	r.Handle("/register").POST(h.HandleCreateUser)
-	r.Handle("/login").POST(notImplemented)
+	r.Handle("/login").POST(h.HandleLogin)
 	r.Handle("/logout").POST(notImplemented)
 	r.Handle("/me").GET(notImplemented)
 	r.Handle("/user").PATCH(notImplemented).DELETE(notImplemented)
